[gd_scene load_steps=2 format=2]

[ext_resource path="res://rooms/lobby/lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.65

[node name="Opponents" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LstOpponents" type="ItemList" parent="TabContainer/Opponents"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Maps" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MapsContainer" type="GridContainer" parent="TabContainer/Maps"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 3

[node name="MapsSelectedContainer2" type="VBoxContainer" parent="TabContainer/Maps/MapsContainer"]
margin_right = 301.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="LblMapsSelected" type="Label" parent="TabContainer/Maps/MapsContainer/MapsSelectedContainer2"]
margin_right = 301.0
margin_bottom = 14.0
text = "Selected"

[node name="LstMapsSelected" type="ItemList" parent="TabContainer/Maps/MapsContainer/MapsSelectedContainer2"]
margin_top = 18.0
margin_right = 301.0
margin_bottom = 18.0

[node name="MapsFeaturedContainer" type="VBoxContainer" parent="TabContainer/Maps/MapsContainer"]
margin_left = 305.0
margin_right = 606.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="LblMapsFeatured" type="Label" parent="TabContainer/Maps/MapsContainer/MapsFeaturedContainer"]
margin_right = 301.0
margin_bottom = 14.0
text = "Selected Maps"

[node name="LstMapsFeatured" type="ItemList" parent="TabContainer/Maps/MapsContainer/MapsFeaturedContainer"]
margin_top = 18.0
margin_right = 301.0
margin_bottom = 18.0

[node name="MapsSearchContainer" type="VBoxContainer" parent="TabContainer/Maps/MapsContainer"]
margin_left = 610.0
margin_right = 911.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="LblMapsSearch" type="Label" parent="TabContainer/Maps/MapsContainer/MapsSearchContainer"]
margin_right = 301.0
margin_bottom = 14.0
text = "Search"

[node name="TxtMapsSearch" type="LineEdit" parent="TabContainer/Maps/MapsContainer/MapsSearchContainer"]
margin_top = 18.0
margin_right = 301.0
margin_bottom = 42.0

[node name="LstMapsSearch" type="ItemList" parent="TabContainer/Maps/MapsContainer/MapsSearchContainer"]
margin_top = 46.0
margin_right = 301.0
margin_bottom = 46.0

[node name="Settings" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
